ci: switch docs to ddox and remove dub.settings.json
- Remove dub.settings.json to work around dub issue #3091 where
  defaultArchitecture is used instead of --arch for tool builds.
- Pass --arch=wasm32-unknown-unknown-wasm explicitly in test.sh.
- Switch docs workflow from -b docs to -b ddox for richer output.
- Add zlib and openssl to devshell for ddox linking.
- Gitignore entire docs/ directory (ddox generates subdirectories).

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,18 +32,12 @@ jobs:
           substituters: ${{ vars.SUBSTITUTERS }}
 
       - name: Generate docs
-        run: nix develop -c dub build -c docs -b docs
-
-      - name: Prepare site
-        run: |
-          mkdir -p _site
-          cp docs/*.html _site/
-          cp _site/package.html _site/index.html
+        run: nix develop -c dub build -c docs -b ddox
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: _site
+          path: docs
 
   deploy:
     name: Deploy to GitHub Pages
